--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -726,7 +726,8 @@ body {
 		display: none
 	}
 }
-@media (max-width: 600px) and (max-height: 750px) {
+@media (max-width: 600px) and (max-height: 700
+	px) {
 	.intro--banner {
 		height: auto
 	}
